# neural-fortran

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  doc-generator.md  fpm.toml
.github/workflows/: ci.yml  deploy-docs.yml
cmake/: Findfunctional.cmake  Findneural-fortran.cmake  compilers.cmake  functional.cmake  h5fortran.cmake  json.cmake  options.cmake
doc/: README.md  class-hierarchy.puml  developer-api.puml  user-api.puml
example/: CMakeLists.txt  cnn.f90  cnn_from_keras.f90  cnn_mnist.f90  cnn_mnist_1d.f90  concatenate.f90  dense_from_keras.f90  dense_mnist.f90  example_save_and_load.f90  get_set_network_params.f90  linear2d.f90  merge_networks.f90  mha_simple.f90  mnist.f90  mnist_from_keras.f90  network_parameters.f90  params.f90  quadratic.f90  simple.f90  simple_2d_mlp.f90  simple_rnn.f90  sine.f90
plotting/: plot_mnist_accuracy.py  plot_mnist_digit.py
scripts/: Findneural-fortran.cmake
src/: mod_activation.f90  mod_activation_submodule.f90  mod_io.f90  mod_io_submodule.f90  mod_kinds.f90  mod_layer.f90  mod_layer_submodule.f90  mod_mnist.f90  mod_mnist_submodule.f90  mod_network.f90  mod_network_submodule.f90  mod_parallel.f90  mod_parallel_submodule.f90  mod_random.f90  mod_random_submodule.f90  nf.f90  nf_activation.f90  nf_base_layer.f90  nf_conv2d_layer.f90  nf_conv2d_layer_submodule.f90  nf_datasets_mnist_submodule.f90  nf_dense_layer.f90  nf_dense_layer_submodule.f90  nf_flatten_layer.f90  nf_flatten_layer_submodule.f90  nf_input1d_layer.f90  nf_input1d_layer_submodule.f90  nf_io_submodule.f90  nf_layer.f90  nf_layer_constructors.f90  nf_layer_constructors_submodule.f90  nf_layer_submodule.f90  nf_loss_submodule.f90  nf_maxpool2d_layer.f90  nf_maxpool2d_layer_submodule.f90  nf_network.f90  nf_network_submodule.f90  nf_random.f90  nf_random_mod.f90  nf_random_s.f90  (+2 more)
src/lib/: mod_activation.f90  mod_io.f90  mod_layer.f90  mod_mnist.f90  mod_network.f90
src/nf/: layernorm.f90  nf_activation.f90  nf_activation_1d.f90  nf_activation_3d.f90  nf_avgpool1d_layer.f90  nf_avgpool1d_layer_submodule.f90  nf_avgpool2d_layer.f90  nf_avgpool2d_layer_submodule.f90  nf_avgpool3d_layer.f90  nf_avgpool3d_layer_submodule.f90  nf_base_layer.f90  nf_base_layer_submodule.f90  nf_batch_norm_layer.f90  nf_batch_norm_layer_submodule.f90  nf_batchnorm_layer.f90  nf_batchnorm_layer_submodule.f90  nf_conv1d_layer.f90  nf_conv1d_layer_submodule.f90  nf_conv2d_layer.f90  nf_conv2d_layer_submodule.f90  nf_cross_attention_layer.f90  nf_datasets.f90  nf_datasets_mnist.f90  nf_datasets_mnist_submodule.f90  nf_datasets_submodule.f90  nf_dense_layer.f90  nf_dense_layer_submodule.f90  nf_dropout_layer.f90  nf_dropout_layer_submodule.f90  nf_embedding_layer.f90  nf_embedding_layer_submodule.f90  nf_embedding_submodule.f90  nf_fc2d_layer.f90  nf_fc2d_layer_submodule.f90  nf_flatten2d_layer.f90  nf_flatten2d_layer_submodule.f90  nf_flatten_layer.f90  nf_flatten_layer_submodule.f90  nf_initializers.f90  nf_input2d_layer.f90  (+52 more)
src/nf/io/: nf_io_binary.f90  nf_io_binary_submodule.f90  nf_io_hdf5.f90  nf_io_hdf5_submodule.f90
src/tests/: example_mnist.f90  example_mnist_epochs.f90  example_montesinos_multi.f90  example_montesinos_uni.f90  example_simple.f90  example_sine.f90  test_network_save.f90  test_network_sync.f90  test_set_activation_function.f90
test/: CMakeLists.txt  driver.f90  linear_2d_layer_test_m.f90  test_avgpool1d_layer.f90  test_avgpool2d_layer.f90  test_batch_norm_layer.f90  test_batchnorm_layer.f90  test_cnn_from_keras.f90  test_conv1d_layer.f90  test_conv1d_network.f90  test_conv2d_layer.f90  test_conv2d_network.f90  test_dense_layer.f90  test_dense_network.f90  test_dense_network_from_keras.f90  test_dropout_layer.f90  test_embedding_layer.f90  test_fc2d_layer.f90  test_flatten2d_layer.f90  test_flatten_layer.f90  test_get_set_network_params.f90  test_input1d_layer.f90  test_input2d_layer.f90  test_input3d_layer.f90  test_insert_flatten.f90  test_io_h5.f90  test_io_hdf5.f90  test_keras_read_model.f90  test_layernorm.f90  test_linear2d_layer.f90  test_locally_connected1d_layer.f90  test_locally_connected2d_layer.f90  test_locally_connected_1d_layer.f90  test_loss.f90  test_maxpool1d_layer.f90  test_maxpool2d_layer.f90  test_metrics.f90  test_mnist.f90  test_multihead_attention_layer.f90  test_optimizers.f90  (+7 more)
